[workspace]
members = [
    "carnyx",
    "carnyx-vst",
    "carnyx-druid",
    "ladder-filter",
    "ladder-filter-vst"
]
default-members = [
    "carnyx",
    "carnyx-vst",
    "ladder-filter",
    "ladder-filter-vst"
]

[patch.'https://github.com/rjwittams/druid/']
druid = { path= "../druid/druid" }

[patch.crates-io]
#vst = {path="../vst-rs/"}